@@ -25,8 +25,12 @@ lib/Devel/NYTProf/ReadStream.pm
 lib/Devel/NYTProf/SubInfo.pm
 lib/Devel/NYTProf/Test.pm
 lib/Devel/NYTProf/Util.pm
+lib/Devel/NYTProf/js/asc.png
+lib/Devel/NYTProf/js/bg.png
+lib/Devel/NYTProf/js/desc.png
 lib/Devel/NYTProf/js/jquery.min.js
 lib/Devel/NYTProf/js/jquery.tablesorter.min.js
+lib/Devel/NYTProf/js/style.tablesorter.css
 perftest.pl
 ppport.h
 t/00.load.t
